Fix bullet point alignment

--- a/src/components/pages/Links/Links.scss
+++ b/src/components/pages/Links/Links.scss
@@ -2,3 +2,7 @@
   text-align: center;
   color: #fff;
 }
+
+.link-list {
+  list-style-position: inside;
+}
